--- a/css/common.css
+++ b/css/common.css
@@ -120,8 +120,9 @@ ul { list-style: none; }
 /* 스폰서 */
 #main_sponser {
       width: 100%;
-      height: 100px;
-      background-color: #999;
+      text-align: center;
+      background-color: #fff;
+      border-top: 1px solid #ccc;
 }
 
 
@@ -146,11 +147,14 @@ ul { list-style: none; }
 
       /* 푸터 */
       #main_footer {
-            height: 180px;
+            height: 190px;
+            margin: 0;
       }
 
       #main_footer > .address {
             font-size: 13px;
+            line-height: 15px;
+            text-align: center;
       }
 
       #main_footer > .info {
