--- a/css/guide.css
+++ b/css/guide.css
@@ -26,12 +26,20 @@ a {
 #main_aside > ul > li > a {
     font-size: 20px;
     font-weight: 600;
-    color: #222;
+    color: #999;
     padding-right: 80px;
+}
+
+#main_aside > ul > li > a:hover {
+    color: #222;
 }
 
 #main_aside > ul > li:nth-child(2) > a {
     padding-right: 0;
+}
+
+#main_aside > ul > li.current > a {
+    color: #222;
 }
 
 #wrap {
@@ -81,7 +89,6 @@ a {
     width: 960px;
     margin: 0 auto;
     /* padding-bottom: 80px; */
-
     display: none;
 }
 
@@ -94,7 +101,7 @@ a {
 #wrap > .map > .map_container {
     width: 100%;
     height: 500px;
-    border: 1px solid #444;
+    background: url("https://via.placeholder.com/500");
     margin-top: 50px;
     margin-bottom: 30px;
 }
@@ -104,7 +111,6 @@ a {
 /* 미디어 쿼리 */
 /* PC (해상도 1024px)*/ 
 @media all and (min-width:1024px) {
-      
 } 
 /* 테블릿 가로, 테블릿 세로 (해상도 768px ~ 1023px)*/ 
 @media all and (min-width:768px) and (max-width:1023px) { 
