10/26 미디어 쿼리 수정, active bar 추가

--- a/css/event.css
+++ b/css/event.css
@@ -8,7 +8,7 @@ body {
     width: 960px;
     margin: 0 auto;
     padding-top: 140px;
-    padding-bottom: 140px;
+    padding-bottom: 100px;
 }
 
 #content_event > h1 {
@@ -37,13 +37,8 @@ body {
 
 .event_container_i > .film.item {
     float: left;
-    width: calc((100% - 60px) / 2);
-    margin-right: 30px;
-    margin-bottom: 60px;
-}
-
-.event_container_i > .film.item:nth-of-type(2n) {
-    margin-right: 0;
+    width: calc((100% - 40px) / 2);
+    margin: 0 10px 60px;
 }
 
 .event_container_i > .film.item > .bg > img {
@@ -75,10 +70,10 @@ body {
 /* 테블릿 가로, 테블릿 세로 (해상도 768px ~ 1023px)*/ 
 @media all and (min-width:768px) and (max-width:1023px) { 
     #content_event {
-        width: calc(100% - 20px);
+        width: calc(100% - 40px);
         margin: 0 20px;
         padding-top: 120px;
-        padding-bottom: 120px;
+        padding-bottom: 100px;
     }
 
     #content_event > h1 {
@@ -98,7 +93,7 @@ body {
 /* 모바일 가로, 모바일 세로 (해상도 480px ~ 767px)*/ 
 @media all and (max-width:767px) { 
     #content_event {
-        width: calc(100% - 20px);
+        width: calc(100% - 40px);
         margin: 0 20px;
         padding-top: 100px;
         padding-bottom: 80px;
