--- a/css/announce.css
+++ b/css/announce.css
@@ -1,9 +1,8 @@
 @charset "UTF-8";
 
 body {
-      background-color: #fff;
+      background: #fff;
 }
-
 a {
       text-decoration: none;
 }
@@ -15,8 +14,7 @@ a {
       overflow: hidden;
       padding-top: 80px;
       padding-bottom: 80px;
-      /* margin-bottom: 60px; */
-      /* margin: 0 30px 60px; */
+      height: 100%;
 }
 
 #wrap > .border {
@@ -40,10 +38,6 @@ a {
       margin-right: 30px;
 }
 
-#main_aside > ul > li.current > a {
-      color: #222;
-}
-
 #main_aside > ul > li > a {
       font-size: 23px;
       padding: 30px 0;
@@ -56,13 +50,16 @@ a {
       color: #222;
 }
 
+#main_aside > ul > li.current > a {
+      color: #222;
+}
+
 
 /* 컨텐츠 - 소개 */
 
 #content_announce {
       float: left;
       width: calc(100% - 251px);
-      /* width: 630px; */
       padding-top: 70px;
       margin-left: 50px;
 }
@@ -78,7 +75,7 @@ a {
 #content_announce > .announce-table {
       width: 100%;
       border-top: 1px solid #444;
-      /* border-collapse: collapse; */
+      border-collapse: collapse;
       margin: 50px 0;
 }
 
@@ -116,6 +113,10 @@ a {
       padding-bottom: 15px;
 }
 
+#content_poster > .poster_container > .poster_img > img {
+      width: 400px;
+}
+
 
 /* 컨텐츠 - 심사위원&시상 */
 #content_winner {
@@ -133,9 +134,8 @@ a {
 
 #content_winner .winner.item {
       float: left;
-      width: calc((100% - 30px) / 3);
-      margin-bottom: 50px;
-      padding-right: 10px;
+      width: calc((100% - 60px) / 3);
+      margin: 0 10px 50px;
 }
 
 #content_winner .winner.item > img {
@@ -167,28 +167,14 @@ a {
 
 #content_partner > .partner_container > img {
       float: left;
-      padding-right: 10px;
-      width: calc((100% - 30px) / 3);
-      margin-bottom: 50px;
-
+      width: calc((100% - 60px) / 3);
+      margin: 0 10px 50px;
 }
 
 
 /* 미디어 쿼리 */
 /* PC (해상도 1024px)*/ 
 @media all and (min-width:1024px) {
-      #content_poster > .poster_container {
-            text-align: left;
-      }
-
-      #content_poster > .poster_container > .poster_text {
-            display: inline-block;
-            width: 600px;
-      }
-
-      #content_poster > .poster_container > .poster_img {
-            display: inline-block;
-      }
 } 
 
 /* 테블릿 가로, 테블릿 세로 (해상도 768px ~ 1023px)*/ 
@@ -202,6 +188,12 @@ a {
       }
 
       /* 컨텐츠 - 소개 */
+      #content_announce {
+            width: calc(100% - 271px);
+            margin-left: 50px;
+            margin-right: 20px;
+      }
+
       #content_announce > h1 {
             font-size: 25px;
       }
@@ -218,11 +210,13 @@ a {
       #content_poster > .poster_container > .poster_text {
             font-size: 17px;
             line-height: 20px;
+            margin-right: 20px;
       }
 
       /* 컨텐츠 - 심사위원&시상 */
       #content_winner .winner.item {
-            width: calc((100% - 30px) / 2);
+            width: calc((100% - 40px) / 2);
+            margin: 0 10px 20px;
       }
 
       #content_winner > h1 {
@@ -275,8 +269,7 @@ a {
             float: none;
             width: calc(100% - 40px);
             padding: 30px 0;
-            margin-left: 20px;
-            margin-right: 20px;
+            margin: 0 20px;
       }
 
       #content_announce > h1 {
@@ -292,8 +285,7 @@ a {
             float: none;
             width: calc(100% - 40px);
             padding-top: 30px;
-            margin-left: 20px;
-            margin-right: 20px;
+            margin: 0 20px;
       }
 
       #content_poster > h1 {
@@ -304,6 +296,10 @@ a {
             text-align: center;
       }
 
+      #content_poster > .poster_container > .poster_img > img {
+            width: 300px;
+      }
+
       #content_poster > .poster_container > .poster_text {
             font-size: 15px;
             line-height: 20px;
@@ -312,26 +308,23 @@ a {
 
 
       /* 컨텐츠 - 심사위원&시상 */
-      #content_winner .winner.item {
-            width: calc((100% - 30px) / 2);
-      }
-
       #content_winner {
             float: none;
-            width: calc(100% - 40px);
+            width: 100%;
             padding-top: 30px;
-            margin-left: 20px;
-            margin-right: 20px;
+            margin-left: 15px;
+            margin-right: 15px;
             overflow: hidden;
       }
 
       #content_winner > h1 {
             font-size: 20px;
+            margin-left: 5px;
       }
 
       #content_winner .winner.item {
-            float: left;
-            width: calc((100% - 20px) / 2);
+            width: calc((100% - 70px) / 2);
+            margin: 0 10px;
       }
 
       #content_winner .winner.item > h5 {
@@ -341,10 +334,9 @@ a {
       /* 컨텐츠 - 파트너 */
       #content_partner {
             float: none;
-            width: calc(100% - 40px);
+            width: 100%;
             padding-top: 30px;
-            margin-left: 20px;
-            margin-right: 20px;
+            margin: 0 20px;
             overflow: hidden;
       }
 
@@ -354,7 +346,7 @@ a {
 
       #content_partner > .partner_container > img {
             float: left;
-            padding-right: 10px;
-            width: calc((100% - 20px) / 2);
+            margin: 0 5px;
+            width: calc((100% - 60px) / 2);
       }
 }
