--- a/css/common.css
+++ b/css/common.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 
 /* 초기화 */
 
 * {
       margin: 0; padding: 0;
-      font-family: 'Nanum Gothic Coding', 'san-serif';
+      font-family: 'Noto Sans KR', 'san-serif';
 }
 /* a { text-decoration: none; } */
 img { border: 0; }
@@ -55,14 +55,32 @@ ul { list-style: none; }
 
 #main_header > .gnb_container > .trigger {
       float: right;
-      width: 30px;
+      width: 25px;
       text-align: right;
       padding-top: 20px;
-      padding-right: 10px;
+      padding-right: 15px;
       display : none;
 }
 
 #main_header > .gnb_container > .trigger .close {
+      display: none;
+}
+
+/* active_path, active bar */
+#main_header > .active_path {
+      position: fixed;
+      width: 100%;
+      height: 1px;
+      /* background: #999; */
+      top: 60px;
+      z-index: 1;
+}
+
+#main_header > .active_path > .active_bar {
+      width: 81px;
+      height: 1px;
+      margin: 0;
+      background: #D94925;
       display: none;
 }
 
@@ -80,6 +98,7 @@ ul { list-style: none; }
 
 #mobile_menu > .gnb {
       padding-top: 40px;
+      border-top: 1px solid #ccc;
 }
 
 #mobile_menu > .gnb > ul > li {
