--- a/css/guide.css
+++ b/css/guide.css
@@ -85,27 +85,31 @@ a {
 }
 
 /* 지도 */
-#wrap > .map {
+#wrap > .content_map {
     width: 960px;
     margin: 0 auto;
-    /* padding-bottom: 80px; */
+    background: #fff;
     display: none;
 }
 
-#wrap > .map > h1 {
+#wrap > .content_map > h1 {
     font-size: 30px;
     text-align: center;
     padding-bottom: 40px;
 }
 
-#wrap > .map > .map_container {
+#wrap > .content_map > #map {
     width: 100%;
     height: 500px;
-    background: url("https://via.placeholder.com/500");
+    z-index: 0 !important; 
     margin-top: 50px;
     margin-bottom: 30px;
+    background: no-repeat;
 }
 
+#wrap > .content_map > .map_info > h4 {
+    font-size: 18px;
+}
 
 
 /* 미디어 쿼리 */
@@ -147,13 +151,17 @@ a {
 
     /* 지도 */
 
-    #wrap > .map {
+    #wrap > .content_map {
         width: calc(100% - 20px);
         margin: 0 10px;
     }
 
-    #wrap > .map > h1 {
+    #wrap > .content_map > h1 {
         font-size: 23px;
+    }
+
+    #wrap > .content_map > .map_info > h4 {
+        font-size: 16px;
     }
 }
 
@@ -197,18 +205,22 @@ a {
     }
 
     /* 지도 */
-    #wrap > .map {
+    #wrap > .content_map {
         width: calc(100% - 20px);
         margin-bottom: 40px;
     }
 
-    #wrap > .map > h1 {
+    #wrap > .content_map > h1 {
         font-size: 20px;
         margin-bottom: 20px;
     }
 
-    #wrap > .map > .map_container {
+    #wrap > .content_map > #map {
         margin-top: 30px;
         margin-bottom: 20px;
+    }
+
+    #wrap > .content_map > .map_info > h4 {
+        font-size: 16px;
     }
 }
