--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,40 @@ body {
       background-position: center;
 }
 
+#big_image_slider .swiper-slide > .slide-title {
+      color: white;
+      text-align: center;
+      text-shadow: 5px 2px 2px gray;
+}
+
+/* 슬라이더 이미지 위에 올라오는 텍스트 */
+#big_image_slider .swiper-slide > .slide-title > span:nth-child(1) {
+      display: block;
+      font-size: 40px;
+      
+}
+
+#big_image_slider .swiper-slide > .slide-title > span:nth-child(2) {
+      display: block;
+      font-size: 50px;
+      font-weight: 600;
+}
+
+#big_image_slider .swiper-slide > .slide-title > span:nth-child(3) {
+      display: block;
+      font-size: 35px;
+}
+
+#big_image_slider .swiper-slide-active .slide-title {
+      animation: flipInX 1s;
+}
+#big_image_slider .swiper-slide-active.slide2  .slide-title {
+      animation: swing 1s;
+}
+#big_image_slider .swiper-slide-active.slide3  .slide-title {
+      animation: bounce 1s;
+}
+
 
 /* 이벤트 */
 
@@ -112,6 +146,12 @@ body {
       border-radius: 10px;
 }
 
+#content_event > #event_container > .event_item:hover {
+      opacity: 0.5;
+      border: 3px solid #9ed5d2;
+      margin: -3px;
+}
+
 
 /* 작은 이미지 슬라이더 */
 
@@ -143,33 +183,78 @@ body {
       -ms-flex-align: center;
       -webkit-align-items: center;
       align-items: center;
+
+      position: relative;
 }
 
 #small_image_slider .swiper-slide.slide1 {
-      background: url('../images/slider_img4_16x9.png');
+      background: url('../images/film_img13.png');
       background-size: cover;
       background-position: center;
 }
 #small_image_slider .swiper-slide.slide2 {
-      background: url('../images/film_img3.png');
+      background: url('../images/film_img14.png');
       background-size: cover;
       background-position: center;
 }
 #small_image_slider .swiper-slide.slide3 {
-      background: url('../images/film_img9.png');
+      background: url('../images/film_img15.png');
       background-size: cover;
       background-position: center;
 }
 #small_image_slider .swiper-slide.slide4 {
-      background: url('../images/slider_img1_16x9.png');
+      background: url('../images/film_img16.png');
       background-size: cover;
       background-position: center;
 }
 #small_image_slider .swiper-slide.slide5 {
-      background: url('../images/slider_img2_16x9.png');
+      background: url('../images/film_img17.png');
       background-size: cover;
       background-position: center;
 }
+
+#small_image_slider .swiper-slide.slide6 {
+      background: url('../images/film_img18.png');
+      background-size: cover;
+      background-position: center;
+}
+
+#small_image_slider .swiper-slide.slide7 {
+      background: url('../images/film_img19.png');
+      background-size: cover;
+      background-position: center;
+}
+
+#small_image_slider .swiper-slide > .slider-caption {
+      display: none;
+}
+
+/* 슬라이더 이미지 hover , 위에 올라오는 텍스트 */
+#small_image_slider .swiper-slide:hover > .slider-caption {
+      background: white;
+      opacity: 0.7;
+      border-top: 1px solid #ccc;
+      display: block;
+      position: absolute;
+      bottom: 0;
+      padding: 10px 0;
+      width: 100%;
+      animation: fadeInDown 1s;
+}
+
+#small_image_slider .swiper-slide:hover > .slider-caption > span:nth-child(1) {
+      display: block;
+      color: #333;
+      font-size: 18px;
+      font-weight: bold;
+}
+
+#small_image_slider .swiper-slide:hover > .slider-caption > span:nth-child(2) {
+      display: block;
+      color: #333;
+      font-size: 16px;
+}
+
 #small_image_slider .swiper-button-next {
       background: url('../images/arrow_right_img_25.png');
       width: 25px;
@@ -444,6 +529,18 @@ body {
             height: 550px;
       }
 
+      #big_image_slider .swiper-slide > .slide-title > span:nth-child(1) {
+            font-size: 35px;
+      }
+      
+      #big_image_slider .swiper-slide > .slide-title > span:nth-child(2) {
+            font-size: 45px;
+      }
+      
+      #big_image_slider .swiper-slide > .slide-title > span:nth-child(3) {
+            font-size: 30px;
+      }
+
       /* 이벤트 */
       #content_event {
             margin: 40px 20px 0;
@@ -566,6 +663,18 @@ body {
       /* 큰 이미지 슬라이더 */
       #big_image_slider > .swiper-container {
             height: 500px;
+      }
+
+      #big_image_slider .swiper-slide > .slide-title > span:nth-child(1) {
+            font-size: 28px;
+      }
+      
+      #big_image_slider .swiper-slide > .slide-title > span:nth-child(2) {
+            font-size: 35px;
+      }
+      
+      #big_image_slider .swiper-slide > .slide-title > span:nth-child(3) {
+            font-size: 25px;
       }
 
       /* 이벤트 */
